--- a/package.json
+++ b/package.json
@@ -14,9 +14,10 @@
 		"cors": "^2.8.5",
 		"dotenv": "^8.2.0",
 		"express": "^4.17.1",
-		"mocha": "^8.1.3",
+		"mocha": "^10.2.0",
 		"mongodb": "^5.7.0",
-		"mongoose": "^7.4.2"
+		"mongoose": "^7.4.2",
+		"nodemon": "^3.0.1"
 	},
 	"repository": {
 		"type": "git",
